[gd_scene load_steps=9 format=2]

[ext_resource path="res://door/connector.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type spatial;

uniform sampler2D viewport;
render_mode unshaded;

void vertex() {
}

void fragment() {
	vec3 color = vec3(texture(viewport, SCREEN_UV).x, texture(viewport, SCREEN_UV).y, texture(viewport, SCREEN_UV).z);
    ALBEDO = color;
}"

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/viewport = SubResource( 2 )

[sub_resource type="PlaneMesh" id=4]
resource_local_to_scene = true
material = SubResource( 3 )
size = Vector2( 3, 0.6 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.5, 3.25, 0.5 )

[sub_resource type="PlaneMesh" id=6]
resource_local_to_scene = true
material = SubResource( 3 )
size = Vector2( 3, 6.5 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1.5, 3.25, 0.22 )

[node name="Connection" type="Spatial"]
script = ExtResource( 1 )

[node name="Middle" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25, 0 )

[node name="Viewport" type="CSGMesh" parent="Middle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.26, 0 )
use_collision = true
mesh = SubResource( 4 )

[node name="Collision" type="CollisionShape" parent="Middle"]
shape = SubResource( 5 )

[node name="EnterFront" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.25, 0 )

[node name="Viewport" type="CSGMesh" parent="EnterFront"]
transform = Transform( 1.01, 0, 0, 0, -4.37114e-08, 1.01, 0, -1, -4.41485e-08, 0, 0, 0.3 )
mesh = SubResource( 6 )

[node name="Collision" type="CollisionShape" parent="EnterFront"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.28 )
shape = SubResource( 7 )

[node name="EnterBack" type="Area" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 3.25, 0 )

[node name="Viewport" type="CSGMesh" parent="EnterBack"]
transform = Transform( 1.01, 0, 0, 0, -4.37114e-08, 1.01, 0, -1, -4.41485e-08, 0, 0, 0.3 )
mesh = SubResource( 6 )

[node name="Collision" type="CollisionShape" parent="EnterBack"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.28 )
shape = SubResource( 7 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 128, 64 )
handle_input_locally = false
hdr = false
keep_3d_linear = true
render_target_clear_mode = 1
render_target_update_mode = 3
gui_disable_input = true

[node name="ColorRect" type="ColorRect" parent="Viewport"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.537255, 0.223529, 1 )

[node name="Spatial" type="Spatial" parent="Viewport"]

[node name="Camera" type="Camera" parent="Viewport/Spatial"]
cull_mask = 2
current = true
fov = 90.0
near = 0.01
far = 1000.0
[connection signal="area_exited" from="Middle" to="." method="_on_Middle_area_exited"]
[connection signal="area_entered" from="EnterFront" to="." method="_on_EnterFront_area_entered"]
[connection signal="area_entered" from="EnterBack" to="." method="_on_EnterBack_area_entered"]
